# vLoD

./: .gitignore  Cargo.toml  Dockerfile  LOD_edit.py  README.md  main.py  merge_vcf_lod.py  pyproject.toml
data/: ALTIUM-2-S3B_annotated.vcf
src/: bam.rs  lib.rs  lod.rs  main.rs  merge.rs  utils.rs  vcf.rs
