[package]
name = "vlod-rs"
version = "0.1.0"
edition = "2021"
default-run = "vlod"

[dependencies]
rust-htslib = "0.50"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
flate2 = "1.1"
csv = "1.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"

[[bin]]
name = "lod_edit"
path = "src/bin/lod_edit.rs"

[[bin]]
name = "merge_vcf_lod"
path = "src/bin/merge_vcf_lod.rs"

[[bin]]
name = "vlod"
path = "src/bin/vlod.rs"

[dev-dependencies]
tempfile = "3.15"
